--- a/web-app/apps/scaffoldgencli-docs/package.json
+++ b/web-app/apps/scaffoldgencli-docs/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "web",
+  "name": "scaffoldgen-cli",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo --port 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
